--- a/analysis/E3_rate.Rmd
+++ b/analysis/E3_rate.Rmd
@@ -5,6 +5,7 @@ date: "`r Sys.Date()`"
 output:
   pdf_document: default
   html_document: default
+knit: (function(inputFile, encoding) {rmarkdown::render(inputFile, encoding = encoding, output_dir = "notebooks") })
 ---
 
 ```{r setup, include=FALSE}
