--- a/analysis/E2_prediction.Rmd
+++ b/analysis/E2_prediction.Rmd
@@ -70,7 +70,7 @@ prior_intercept <- set_prior('normal(log(0.8 / (1 - 0.8)), 1)', class = 'Interce
 
 In this range, a difference in 0.25 log odds gives us about a 5% decrease in accuracy.
 ```{r}
-prior_mus <- set_prior('normal(-0.25, 1)', coef = 'Musician1')
+prior_mus <- set_prior('normal(-0.25, 1)', coef = 'MusicianNo')
 ```
 
 **Scramble:** We expect performance to improve as scramble level decreases. If we code 8B as reference level, then we expect 8B > 2B and 8B > 1B.
@@ -85,8 +85,8 @@ prior_scramble1B <- set_prior('normal(-0.2, 1)', coef = 'scramble3')
 **Interaction:** We expect no interaction between group and scramble.
 
 ```{r}
-prior_int2B <- set_prior('normal(0, 1)', coef = 'Musician1:scramble2')
-prior_int1B <- set_prior('normal(0, 1)', coef = 'Musician1:scramble3') 
+prior_int2B <- set_prior('normal(0, 1)', coef = 'MusicianNo:scramble2')
+prior_int1B <- set_prior('normal(0, 1)', coef = 'MusicianNo:scramble3') 
 ```
 
 **Random slope for subjects:**
@@ -95,6 +95,10 @@ prior_int1B <- set_prior('normal(0, 1)', coef = 'Musician1:scramble3')
 \newpage
 
 ## Main model with group and condition
+
+```{r}
+get_prior(response ~ Musician + scramble + (1 | exp_subject_id), data = data)
+```
 
 ```{r}
 mus_scram <- brm(response ~ Musician + scramble + (1 | exp_subject_id), data = data,
@@ -299,7 +303,7 @@ get_prior(response ~ Musician + scramble + (1 | exp_subject_id), data = data_no1
 no1B <- brm(response ~ Musician + scramble + (1 | exp_subject_id), data = data_no1B,
             family = bernoulli(),
             prior = c(
-              prior_intercept, prior_mus, set_prior('normal(-0.1, 1)', coef = 'scramble1')
+              prior_intercept, prior_mus, set_prior('normal(-0.1, 1)', coef = 'scramble2B')
               ),
             save_pars = save_pars(all = TRUE), iter = 5000,
             file = 'models/E2_no1B')
@@ -321,8 +325,8 @@ no1B_int <- brm(response ~ Musician*scramble + (1 | exp_subject_id), data = data
                 family = bernoulli(),
                 prior = c(
                   prior_intercept, prior_mus, 
-                  set_prior('normal(-0.1, 1)', coef = 'scramble1'),
-                  set_prior('normal(0, 1)', coef = 'Musician1:scramble1')
+                  set_prior('normal(-0.1, 1)', coef = 'scramble2B'),
+                  set_prior('normal(0, 1)', coef = 'MusicianNo:scramble2B')
                   ),
                 save_pars = save_pars(all = TRUE), iter = 5000,
                 file = 'models/E2_no1B_int')
