--- a/analysis/E3_alignment.Rmd
+++ b/analysis/E3_alignment.Rmd
@@ -108,7 +108,7 @@ get_prior(value ~ Musician + scramble + level + (1|sub), data = data_nested)
 ```{r, include=FALSE}
 # not run - this block is for reference
 # group contrast - expect Musicians to be more aligned
-#set_prior('normal(-0.1, 0.1)', coef = 'Musician1')
+#set_prior('normal(-0.1, 0.1)', coef = 'MusicianNo')
 
 # Intact to 8B contrast - expect greater alignment in 8B since phrase level is emphasized by scramble
 #set_prior('normal(0.1, 0.1)', coef = 'scramble2')
@@ -132,7 +132,7 @@ get_prior(value ~ Musician + scramble + level + (1|sub), data = data_nested)
 ```{r}
 nested_3way <- brm(value ~ Musician + scramble + level + (1|sub), data = data_nested,
                    prior = c(
-                     set_prior('normal(-0.1, 0.1)', coef = 'Musician1'),
+                     set_prior('normal(-0.1, 0.1)', coef = 'MusicianNo'),
                      set_prior('normal(0.1, 0.1)', coef = 'scramble2'),
                      set_prior('normal(-0.1, 0.1)', coef = 'scramble3'),
                      set_prior('normal(-0.1, 0.1)', coef = 'scramble4'),
@@ -168,7 +168,7 @@ nested_noMus <- brm(value ~ scramble + level + (1|sub), data = data_nested,
 
 nested_noScram <- brm(value ~ Musician + level + (1|sub), data = data_nested,
                       prior = c(
-                     set_prior('normal(-0.1, 0.1)', coef = 'Musician1'),
+                     set_prior('normal(-0.1, 0.1)', coef = 'MusicianNo'),
                      set_prior('normal(-0.2, 0.1)', coef = 'level1'),
                      set_prior('normal(-0.1, 0.1)', coef = c('level2', 'level4')) 
                    ),
@@ -177,7 +177,7 @@ nested_noScram <- brm(value ~ Musician + level + (1|sub), data = data_nested,
 
 nested_noLevel <- brm(value ~ Musician + scramble + (1|sub), data = data_nested,
                       prior = c(
-                     set_prior('normal(-0.1, 0.1)', coef = 'Musician1'),
+                     set_prior('normal(-0.1, 0.1)', coef = 'MusicianNo'),
                      set_prior('normal(0.1, 0.1)', coef = 'scramble2'),
                      set_prior('normal(-0.1, 0.1)', coef = 'scramble3'),
                      set_prior('normal(-0.1, 0.1)', coef = 'scramble4')
