--- a/analysis/E1_memory.Rmd
+++ b/analysis/E1_memory.Rmd
@@ -111,7 +111,7 @@ mus_scram <- brm(response ~ Musician + scramble + (1 | exp_subject_id), data = d
                  family = bernoulli(),
                  prior = c(prior_intercept, prior_mus, 
                            prior_scramble2B, prior_scramble1B),
-                 save_pars = save_pars(all = TRUE), iter = 10000,
+                 save_pars = save_pars(all = TRUE), iter = 20000, silent = 1,
                  file = 'models/E1_mus_scram')
 ```
 
@@ -163,7 +163,7 @@ To get the main effect of scramble level, fit the "null" model with group only t
 mus_only <- brm(response ~ Musician + (1 | exp_subject_id), data = data,
                  family = bernoulli(),
                  prior = c(prior_intercept, prior_mus),
-                 save_pars = save_pars(all = TRUE), iter = 10000,
+                 save_pars = save_pars(all = TRUE), iter = 20000, silent = 1,
                  file = 'models/E1_mus_only')
 ```
 
@@ -194,7 +194,7 @@ mus_scram_int <- brm(response ~ Musician*scramble + (1 | exp_subject_id), data =
                  prior = c(prior_intercept, prior_mus, 
                            prior_scramble2B, prior_scramble1B,
                            prior_int2B, prior_int1B),
-                 save_pars = save_pars(all = TRUE), iter = 10000,
+                 save_pars = save_pars(all = TRUE), iter = 20000, silent = 1,
                  file = 'models/E1_mus_scram_int')
 ```
 
@@ -289,7 +289,7 @@ these_priors <- c(
 ```{r}
 years_mus_scram <- brm(accuracy ~ scramble + yrs_mus_exp + (1|exp_subject_id), data = yrs_exp,
                    prior = these_priors,
-                   save_pars = save_pars(all = TRUE), iter = 10000,
+                   save_pars = save_pars(all = TRUE), iter = 20000, silent = 1,
                    file = 'models/E1_years')
 ```
 
@@ -305,7 +305,7 @@ years_mus <- brm(accuracy ~ yrs_mus_exp + (1|exp_subject_id), data = yrs_exp,
                  prior = c(
                    set_prior('normal(0.75, 0.1)', class = 'Intercept'),
                    set_prior('normal(0, 0.1)', coef = 'yrs_mus_exp')),
-                 save_pars = save_pars(all = TRUE), iter = 10000,
+                 save_pars = save_pars(all = TRUE), iter = 20000, silent = 1,
                  file = 'models/E1_years_null')
 ```
 
