Try to fix figure labels

--- a/analysis/E1_memory.Rmd
+++ b/analysis/E1_memory.Rmd
@@ -247,7 +247,7 @@ ggplot() +
   #ylim(0, 0.85) +
   xlab('Scramble Level') +
   ylab('Posterior Distribution of\nProportion Correct (Memory)') +
-  scale_fill_discrete(name="", labels=c('Musicians', 'Non-musicians')) +
+  scale_fill_discrete(name="", labels=c('Non-musicians', 'Musicians')) +
   theme(legend.text = element_text(size = 12))
 
 ggsave('../figures/Fig2A_memory.png', width = 7, height = 5)
