--- a/analysis/E2_prediction.Rmd
+++ b/analysis/E2_prediction.Rmd
@@ -25,10 +25,10 @@ This notebook analyzes prediction using Bayesian binomial generalized linear mix
 # Set up
 
 ```{r}
-#set.seed(15000)
+set.seed(15000)
 # other seeds for stability checks
 #set.seed(20)
-set.seed(20000)
+#set.seed(20000)
 ```
 
 ```{r}
@@ -250,7 +250,7 @@ ggplot() +
   ylim(0, 0.85) +
   xlab('Scramble Level') +
   ylab('Posterior Distribution of\nProportion Correct (Prediction)') +
-  scale_fill_discrete(name="", labels=c('Musicians', 'Non-musicians')) +
+  scale_fill_discrete(name="", labels=c('Non-musicians', 'Musicians')) +
   theme(legend.text = element_text(size = 12))
 
 ggsave('../figures/Fig2B_prediction.png', width = 7, height = 5)
